@@ -33,6 +33,8 @@
 #ifndef pam_krb5_userinfo_h
 #define pam_krb5_userinfo_h
 
+#include "map.h"
+
 struct _pam_krb5_user_info {
 	uid_t uid;
 	gid_t gid;
@@ -43,7 +45,10 @@ struct _pam_krb5_user_info {
 struct _pam_krb5_user_info *_pam_krb5_user_info_init(krb5_context ctx,
 						     const char *name,
 						     const char *realm,
-						     int check_user);
+						     int check_user,
+						     int num_mappings,
+						     struct name_mapping *mappings);
+
 void _pam_krb5_user_info_free(krb5_context ctx,
 			      struct _pam_krb5_user_info *info);
 
