@@ -1,4 +1,10 @@
 2003-11-20 nalin
+	* src/userinfo.c, src/userinfo.h: when setting things up for a user,
+	obey "mappings" settings.  Because we can't be certain that the
+	generated principal will pass through aname_to_lname correctly, don't
+	do that any more.
+
+2003-11-20 nalin
 	* src/initopts.c(_pam_krb5_set_init_opts): set the ticket lifetime,
 	if configured, as an initopt.
 
